--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.biometric:biometric:1.1.0"
     implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation "com.google.code.gson:gson:2.8.6"
 }
